tests/Tuc/Fixtures/errors/WrongEvent-read.tuc
tuc parse error test
participants
    GenericService parts
    [InputStream] parts

GenericService
    [InputStream] -> Wrong
